# talkToMePy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  api.py  model_runtime.py  schemas.py
launchd/: com.talktomepy.plist
openapi/: openapi.generated.yaml  openapi.yaml
scripts/: custom_voice_smoke.py  export_openapi.py  launchd_instance.sh  run_model_tests.sh  run_service.sh  setup.sh  smoke_common.py  update_dev.sh  update_stable.sh  voice_clone_smoke.py  voice_design_smoke.py
tests/: model_backed_common.py  test_api_endpoints.py  test_model_runtime_fallback.py  test_openapi_parity.py
tests/direct_model/: test_direct_model_mode_paths.py
tests/e2e_api/: test_e2e_api_mode_paths.py
